<resources>
    <string name="app_name">Fifty2Book</string>
    <string name="statsHeader">Quick Stats</string>
    <string name="action_settings">Settings</string>
    <string name="progressText">Your Progress:</string>
    <string name="goalText">Goal:</string>
    <string name="readText">Read:</string>
    <string name="remainingText">Remaining:</string>
    <string name="goalVal">Set a Goal!</string>
    <string name="goalPercent"> %</string>
    <string name="readVal">0</string>
    <string name="remVal">0</string>
    <string name="title_activity_settings">Settings</string>
    <string-array name="spinnerArray">
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
    </string-array>
    <string-array name="navArray">
        <item>Add Book</item>
        <item>Quick Stats</item>
        <item>Book List</item>
        <item>Read Books List</item>
    </string-array>
    <string name="settingsGoalText">I\'m going to read </string>
    <string name="settingsGoalText1">books in </string>
    <string name="goalButton">Set Goal!</string>
    <string name="timeLeft">Time Remaining:</string>
    <string name="action_list">Book List</string>
    <string name="action_add">Add</string>
    <string name="title_activity_add_book">Add Book</string>
    <string name="bookTitle">Book Title:</string>
    <string name="authorName">Author Name:</string>
    <string name="genre">Genre:</string>
    <string name="pages">Pages:</string>
    <string name="rating">Rating</string>
    <string name="addButton">Add Book</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="cmd_mark_read">Mark Read</string>
    <string name="cmd_cancel">Cancel</string>
    <string name="empty_list_msg">Your book list is empty.</string>
    <string name="alert_title">Book Options</string>
    <string name="title_activity_read_books_list">Read Books List</string>
    <string name="delete_alert_title">Delete Book?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="navTitle">Navigation</string>
    <string name="days_left">%1$ days left</string>
    <string name="percent">%1$ %</string>
    <string name="settingsError">There was an issue launching Settings</string>
    <string name="addBookError">One of the required fields was left blank.</string>
    <string name="error">Error</string>
    <string name="bookToString">Title: %1$
    Author: %2$
    Genre: %3$
    Pages: %4$
    Rating: %5$</string>
</resources>
