<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.emmons.kelsey.umkc.fifty2book.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_list"
        android:title="@string/action_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@drawable/ic_action_add"
        app:showAsAction="withText|ifRoom"/>
    <item
        android:id="@+id/action_read_list"
        android:title="@string/title_activity_read_books_list"
        app:showAsAction="never"/>
</menu>
